Add some fancy js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,9 @@
 
 
 .avatar {
-    margin: 0 15px 15px 0; 
+    display: block;
+    width:96px;
+    margin: 0 auto 15px auto; 
 }
 
 .resize {
@@ -34,4 +36,8 @@
 .ua-ie-7 .resize, 
 .ua-ie-8 .resize {
     display: none;
+}
+
+#footer {
+    text-align: center;
 }
