--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+html {
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
+}
+
 .center {
     text-align: center;
 }
@@ -21,6 +26,14 @@
     }
 }
 
+#bio .span2 {
+    margin: 0 0 19px 0;
+}
+
+#bio .span4 {
+    margin-bottom: 19px;
+}
+
 .twitter-follow-button {
     margin: 9px 0 0 10px;
 }
@@ -28,7 +41,7 @@
 .avatar {
     display: block;
     width:96px;
-    margin: 0 auto 15px auto; 
+    margin: 0 0 0 0; 
 }
 
 .resize {
